--- a/plugin.xml
+++ b/plugin.xml
@@ -40,9 +40,9 @@
 
     <!-- cordova -->
     <engines>
-        <engine name="cordova" version=">=3.0.0" />
-        <engine name="android-sdk" version=">=19" />
-        <engine name="apple-ios" version=">=8.0" />
+        <engine name="cordova" version=">=9.0.0" />
+        <engine name="cordova-android" version=">=12.0.0" />
+        <engine name="cordova-ios" version=">=5.1.0" />
     </engines>
 
     <!-- interface -->
